--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;600;700&display=swap");
 
 html,
 body,
@@ -7,7 +7,7 @@ body,
 .content {
   height: 100%;
   width: 100%;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Source Sans 3", sans-serif;
 }
 
 .app {
@@ -24,12 +24,16 @@ body,
   background: #e0e0e0;
 }
 
-/* Handle */
+/* Handle*/
 ::-webkit-scrollbar-thumb {
   background: #888;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+/* Handle on Hover */
+::-webkit-scrollbar-track:hover {
   background: #555;
 }
+
+
+
+
